--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-docs": "^6.5.14",
     "@storybook/addon-essentials": "^6.5.14",
     "@storybook/addon-interactions": "^6.5.14",
     "@storybook/addon-links": "^6.5.14",
