--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://dorrion.github.io/Ajou-Psychology-Brochure/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -24,9 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
@@ -73,7 +70,6 @@
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "gh-pages": "^4.0.0",
     "prop-types": "^15.8.1",
     "webpack": "^5.75.0"
   }
